--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -628,7 +628,7 @@
   publisher={Elsevier}
 }
 
-@article{Ashrafetal2014b,
+@article{ashrafetal2014b,
   title={Awards unbundled: Evidence from a natural field experiment},
   author={Ashraf, Nava and Bandiera, Oriana and Lee, Scott S},
   journal={Journal of Economic Behavior \& Organization},
