--- a/manuscript/article.Rmd
+++ b/manuscript/article.Rmd
@@ -12,7 +12,7 @@ abstract:    |
     | __Results.__ Financial bonuses increased the number of cleaned breeding sites in both treatment status (individual and team bonuses) and team bonuses also improved larvae extermination. The intervention decreased the disease incidence in 10.3%, but the findings are not statistically significant across all model specifications.
     | __Conclusions.__ Performance bonuses improve productivity in public service provision, yet more research is needed to asssess whether higher health care worker performance decreases dengue hospitalisations.
     | __Public Health Implications.__ *A. aegypti* control programmes may benefit from alternative compensation schemes, specially when provided to teams. For this strategy to succeed, financial incentives have to be distributed widely as their aggregate effect is limited.
-abstractspacing: onehalf
+abstractspacing: single
 keywords: Aedes aegypti, dengue, financial incentives, mosquito control, randomised field experiment, preventive health care
 fontsize: 12pt
 margin: 2cm
@@ -123,17 +123,17 @@ patient outcomes and reduce hospitalisations in *Aedes*-endemic countries.
 \label{sec:methods}
 
 We conducted a randomised field trial in Rio Verde, a municipality in the
-Brazilian Midwestern state of Goiás. Rio Verde had 229,000 inhabitants and 1,156
-confirmed dengue cases, one of highest counts in the state [@goias2020]. We used
-Facebook advertisements to recruit potential participants. The advertisements
-directed applicants to Google Forms, where we asked for their contact
-information. We sent a pre-treatment demographic survey to every applicant who
-provided a valid email address. At this stage, we excluded all individuals under
-18 years old. We invited the remaining applicants to our training session, which
-we ran on the 4^th^ of May, 2018. The meeting consisted of a lecture on *A.
-aegypti* vector biology and practical instructions on how to find and
-exterminate mosquito breeding sites. Those who did not attend the session were
-also excluded from the study. 
+Brazilian Midwestern state of Goiás. Rio Verde had 229,000 inhabitants and
+1,156 confirmed dengue cases, one of highest counts in the state [@goias2020].
+We used Facebook advertisements to recruit potential participants. The
+advertisements directed applicants to Google Forms, where we asked for their
+contact information. We sent a pre-treatment demographic survey to every
+applicant who provided a valid email address. At this stage, we excluded all
+individuals under 18 years old and invited the remaining applicants to our
+training session, which we ran on the 4^th^ of May, 2018. The meeting consisted
+of a lecture on *A. aegypti* vector biology and practical instructions on how
+to find and exterminate mosquito breeding sites. Those who did not attend the
+session were also excluded from the study. 
 
 Table \ref{tab:covbal} displays the attrition tests, the covariate balance
 tests, and the territorial assignment before and after applying propensity score
@@ -201,7 +201,7 @@ The intervention took place on the 5^th^ of May, 2018. We randomly assigned
 subjects into three groups and directed each group to separate headquarters in
 order to avoid spillovers. In the control group ($n = 68$), we told
 participants that they would receive a flat payment regardless of their
-performance (BRL 110 / USD 20 per subject). In the individual treatment group
+performance (BRL 110 / USD 25 per subject). In the individual treatment group
 ($n = 68$), we informed subjects that we would rank individual performances and
 double the compensation for those who performed above the sample median (BRL
 220 / USD 50 per subject). In the collective treatment group ($n = 70$), we
@@ -383,7 +383,7 @@ $^{**}$p$<$0.05; $^{***}$p$<$0.01.}
 \end{table}
 
 The intervention lowered dengue incidence in 10.3\% (CI: [XXX, XXX]) if we take
-both treatments and compare them with the control group. The result is
+both treatments together and compare them with the control group. The result is
 consistent around fewer weeks before and after the intervention, but it does
 not reach conventional levels of statistical significance. This suggests that
 the treatment effect is probably small. The comparison between the two
@@ -472,7 +472,7 @@ areas.
 ## Limitations
 \label{sub:limitations}
 
-The study has important limitations. First, we ran our experiment for a small
+The study has several limitations. First, we ran our experiment for a small
 period of time and in a particular Brazilian city, thus the findings may not
 generalise to other locations. Second, our experiment needed a longer and wider
 coverage to measure whether the treatment has a significant impact on dengue
